--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="style.css">
 <!-- CSS -->
-<link rel="stylesheet" href="productStyle.css">
+<link rel="stylesheet" href="productstyle.css">
 
 
 </head>
@@ -202,5 +202,6 @@
 
 </body>
 </html
+
 
   
