--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Open Graph / Social Hedia Meta Tags -->
        <meta property="og:title" content="palace restaurant and hotel| meals like no other">
        <meta property="og description" content="home of tasty rich and affordable meals">
-       <meta property="og:image" content="">
+       <meta property="og:image" content="image/ChatGPT Image Jan, 19, 2026, 06_06_00 PM.png">
        <meta property="og:url" content="website">
        <meta property="og:site_name" content="palace restaurant and hotel">
 
@@ -107,4 +107,5 @@
     </footer>
 
 </body> 
+
 </html>
